Resolve security error on firefox.

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 * {margin:0;padding:0;box-sizing:border-box;}
 html{width:100%;height:100%;background-color:#fafafa;}
 
+.en *:lang(ja){display:none;}
+.ja *:lang(en){display:none;}
+
 body{
 	width:100%;
 	height:100%;
